Removed image font and replaced it with HTML Unicode. Works well on chrome, firefox, and safari. I'm still working on IE it has some issue.

--- a/sass/_lib.sass
+++ b/sass/_lib.sass
@@ -28,7 +28,7 @@ $default-button-font-margin: 17
 $default-small-button-line-height: 75
 $default-big-button-line-height:  90
 $default-button-margin-left: 17
-$default-next-margin-left: 18
+$default-next-margin-left: 16
 $i: 220
 @while $i >= $width
   @if $i >= $width
